@@ -88,3 +88,16 @@ def test_tight_decoration(hlwm, tight_dec):
     # check that it does not crash
     hlwm.create_client()
     hlwm.call('split explode')
+
+
+def test_font_type_existing_font(hlwm):
+    for value in ['*FIXED*', '*FiXed*', 'fixed']:
+        hlwm.call(['set_attr', 'theme.font', value])
+
+        assert hlwm.attr.theme.font() == value
+
+
+def test_font_type_non_existing_font(hlwm):
+    value = 'Some long font name that hopefully does not exist'
+    hlwm.call_xfail(['set_attr', 'theme.font', value]) \
+        .expect_stderr(f"cannot allocate font.*'{value}'")
